engine/crates/engine/src/registry/resolvers/graphql/snapshots/engine__registry__resolvers__graphql__serializer__tests__field_directives@query { foo @include(if true) @deprecated @exclude(if 42) }.snap
---
source: crates/engine/src/registry/resolvers/graphql/serializer.rs
expression: serialize(input)
---
query {
	foo @include(if: true) @deprecated @exclude(if: 42)
}

